@@ -14,7 +14,6 @@
 #include "SusyNtuple/Susy3LepCutflow.h"
 #include "SusyNtuple/TGuiUtils.h"
 //#include "SusyNtuple/BTagCalib.h"
-#include "SusyNtuple/BTagCalib.h"
 #include "SusyNtuple/SleptonXsecReader.h"
 
 #ifdef __CINT__
@@ -33,7 +32,6 @@
 
 #pragma link C++ namespace Susy+;
 //#pragma link C++ namespace BTagCalib;
-#pragma link C++ namespace BTagCalib;
 #pragma link C++ namespace D3PDReader;
 
 #pragma link C++ class D3PDReader::VariableStats+;
